--- a/大作业.css
+++ b/大作业.css
@@ -377,8 +377,8 @@ li{
 	height:80px;
 	position:relative;
 	bottom:75px;
+	opacity: 0.9;
 	padding-left:50px;
-
 	background-color:#4c4c4c;
 }
 .box-2{
@@ -401,6 +401,7 @@ li{
 	position:relative;
 	bottom:75px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-3{
@@ -422,6 +423,7 @@ li{
 	position:relative;
 	bottom:75px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-4{
@@ -443,6 +445,7 @@ li{
 	position:relative;
 	bottom:75px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-5{
@@ -460,6 +463,7 @@ li{
 	position:relative;
 	bottom:20px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-6{
@@ -477,6 +481,7 @@ li{
 	position:relative;
 	bottom:20px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-7{
@@ -494,6 +499,7 @@ li{
 	position:relative;
 	bottom:18px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .box-8{
@@ -514,11 +520,12 @@ li{
 	position:relative;
 	bottom:18px;
 	padding-left:50px;
+	opacity: 0.9;
 	background-color:#4c4c4c;
 }
 .bottom{
 	height:102;
-	padding-left:400px;
+	padding-left:250px;
 	background-color:#f5f5f5;
 }
 .bottom-f1{
@@ -586,7 +593,7 @@ li{
 	color:white;
 	height:100px;
 	padding-top:30px; 
-	padding-left:500px;
+	padding-left:450px;
 	background-color:#323232;
 }
 .last a{
